<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:id="@+id/layout_id"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="24sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/babyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/hint_item" />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/babyItem"
                android:hint="@string/hint_qty"
                android:inputType="number" />

            <EditText
                android:id="@+id/itemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemQuantity"
                android:hint="@string/hint_color" />

            <EditText
                android:id="@+id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemColor"
                android:hint="@string/hint_size"
                android:inputType="number" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemSize"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/save_button"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>