<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure_text"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:padding="8dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/conf_no_button"
                android:text="@string/no_text"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/conf_yes_button"
                android:text="@string/yes_text"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>